# llmfc

./: .gitmodules  AGENT.md  IMPLEMENTATION_REPORT.md  PROJECT_REPORT.md  README.md  REVIEW_REPORT.md  SPEC.md  VERIFICATION_REPORT.md  settings.gradle.kts
app/src/main/java/org/fcitx/fcitx5/android/: FcitxRemoteService.kt
app/src/main/java/org/fcitx/fcitx5/android/input/: CandidatesView.kt  FcitxInputMethodService.kt
lib/common/src/main/aidl/org/fcitx/fcitx5/android/common/ipc/: IFcitxRemoteService.aidl  IInputSuggestions.aidl
plugin/aicompose/: build.gradle.kts  proguard-rules.pro
plugin/aicompose/src/main/: AndroidManifest.xml
plugin/aicompose/src/main/cpp/: CMakeLists.txt  LlamaEngine.cpp
plugin/aicompose/src/main/kotlin/org/fcitx/fcitx5/android/plugin/aicompose/: AIComposeEngine.kt  AIComposePlugin.kt  LlamaEngine.kt  MainService.kt
plugin/aicompose/src/main/kotlin/org/fcitx/fcitx5/android/plugin/aicompose/data/: PluginData.kt
plugin/aicompose/src/main/kotlin/org/fcitx/fcitx5/android/plugin/aicompose/ui/: AIComposeSettingsActivity.kt
plugin/aicompose/src/main/res/layout/: activity_ai_compose_settings.xml  item_model.xml
plugin/aicompose/src/main/res/values/: strings.xml
plugin/aicompose/src/main/res/xml/: plugin.xml
plugin/aicompose/src/test/kotlin/org/fcitx/fcitx5/android/plugin/aicompose/: AIComposeEngineTest.kt
scripts/: download_model.py
